package seedu.inventorybro.command;

import seedu.inventorybro.CategoryList;
import seedu.inventorybro.ItemList;
import seedu.inventorybro.Ui;

//@@author kenpegrasio
public interface Command {
    /**
     * Executes the command against the provided item list.
     *
     * @param items The inventory item list to operate on.
     */
    void execute(ItemList items, CategoryList categories, Ui ui);
}
