@startuml

skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, ui: Ui): void
}

class TransactCommand {
    - input: String
    - transactionStorage: TransactionStorage
    + TransactCommand(input: String)
    + execute(items: ItemList, ui: Ui): void
}

class ItemList {
    + getItem(index: int): Item
}

class Item {
    + getQuantity(): int
    + setQuantity(quantity: int): void
    + getDescription(): String
}

class TransactCommandValidator {
    - input: String
    + validate(items: ItemList): void
}

interface Validator <<interface>> {
    + validate(items: ItemList): void
}

class TransactionStorage {
    + saveHistory(itemName: String, change: int): void
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. TransactCommand

TransactCommand .right.> TransactCommandValidator : <<creates>>
TransactCommandValidator .up.|> Validator
TransactCommandValidator ..> ItemList : <<uses>>
TransactCommandValidator ..> Item : <<uses>>
TransactCommand .> Item : modifies >
TransactCommand ..> ItemList : <<uses>>
TransactCommand ..> TransactionStorage : <<uses>>
TransactCommand ..> Ui : <<uses>>

@enduml